@@ -1,3 +1,9 @@
+2020-11-24 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCClospre.cc,
+	  src/SDCClospre.hpp:
+	  llospre fixes.
+
 2020-11-23 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCopt.c:
